--- a/src/mm_rag.ipynb
+++ b/src/mm_rag.ipynb
@@ -2,9 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_41796\\2428436760.py:27: LangChainDeprecationWarning: As of langchain-core 0.3.0, LangChain uses pydantic v2 internally. The langchain_core.pydantic_v1 module was a compatibility shim for pydantic v1, and should no longer be used. Please update the code to import from Pydantic directly.\n",
+      "\n",
+      "For example, replace imports like: `from langchain_core.pydantic_v1 import BaseModel`\n",
+      "with: `from pydantic import BaseModel`\n",
+      "or the v1 compatibility namespace if you are working in a code base that has not been fully upgraded to pydantic 2 yet. \tfrom pydantic.v1 import BaseModel\n",
+      "\n",
+      "  from preprocess.embedding import (\n"
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "import os\n",
@@ -26,13 +40,13 @@
     "#conda install -c conda-forge ffmpeg\n",
     "\n",
     "from utils import encode_image\n",
-    "from preprocess import (\n",
+    "from preprocess.preprocessing import (\n",
     "    extract_and_save_frames_and_metadata,\n",
     ")\n",
-    "from vector_store import (\n",
+    "from crud.vector_store import (\n",
     "    MultimodalLanceDB,\n",
     ")\n",
-    "from embedding import (\n",
+    "from preprocess.embedding import (\n",
     "    BridgeTowerEmbeddings,\n",
     ")"
    ]
